tests/ui/parser/unsafe-mod.stderr
error[E0583]: file not found for module `n`
  --> $DIR/unsafe-mod.rs:5:1
   |
LL | unsafe mod n;
   | ^^^^^^^^^^^^^
   |
   = help: to create the module `n`, create file "$DIR/n.rs" or "$DIR/n/mod.rs"
   = note: if there is a `mod n` elsewhere in the crate already, import it with `use crate::...` instead

error: module cannot be declared unsafe
  --> $DIR/unsafe-mod.rs:1:1
   |
LL | unsafe mod m {
   | ^^^^^^

error: module cannot be declared unsafe
  --> $DIR/unsafe-mod.rs:5:1
   |
LL | unsafe mod n;
   | ^^^^^^

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0583`.
